Fix deprecation of URL constructors